# p3at

./: .gitignore  README.md
p3at_accessories/icm20948_imu/: README.md  package.xml
p3at_accessories/icm20948_imu/config/: mag_config.yaml.backup2
p3at_accessories/icm20948_imu/launch/: icm20948.launch
p3at_accessories/icm20948_imu/nodes/: icm20948_node
p3at_accessories/icm20948_imu/scripts/: calibrate_compass
p3at_accessories/icm20948_imu/src/icm20948_imu/: __init__.py
p3at_accessories/p3at_gripper/: CMakeLists.txt  package.xml
p3at_accessories/p3at_gripper/launch/: p3at_gripper.launch
p3at_accessories/p3at_gripper/msg/: Command.msg  Feedback.msg
p3at_accessories/p3at_gripper/scripts/: p3at_gripper_joy.py
p3at_accessories/p3at_rplidar/: CMakeLists.txt  package.xml
p3at_accessories/p3at_rplidar/config/: p3at_laser_filter.yaml
p3at_accessories/p3at_rplidar/launch/: p3at_laser_filter.launch
p3at_accessories/vr_pan_tilt_autophat/: CMakeLists.txt  package.xml  setup.py
p3at_accessories/vr_pan_tilt_autophat/docker/: Dockerfile
p3at_accessories/vr_pan_tilt_autophat/launch/: usb_cam.launch
p3at_accessories/vr_pan_tilt_autophat/scripts/: pan_tilt_node  pan_tilt_node.py  pan_tilt_node_original
p3at_accessories/vr_pan_tilt_autophat/src/vr_pan_tilt_autophat/: __init__.py  pan_tilt_listener.py
p3at_base/: CMakeLists.txt  package.xml
p3at_base/include/p3at_base/: p3at_hardware.h
p3at_base/launch/: base.launch
p3at_base/scripts/: install
p3at_base/src/: p3at_base.cpp  p3at_hardware.cpp
p3at_bringup/: CMakeLists.txt  package.xml  setup.py
p3at_bringup/launch/: accessories.launch
p3at_bringup/scripts/: install
p3at_control/: CMakeLists.txt  package.xml
p3at_control/config/: control.yaml  joy_node.yaml  robot_localization.yaml  teleop_logitech.yaml  teleop_twist_joy.yaml  twist_mux.yaml
p3at_control/launch/: control.launch  teleop.launch
p3at_description/: CMakeLists.txt  package.xml
p3at_description/launch/: description.launch
p3at_description/meshes/p3at_meshes/: sensor_arch.dae
p3at_description/models/: p3at_sensor_arch.blend  p3at_sensor_arch.blend1  top.dae
p3at_description/models/p3at_models/: axle.dae  back_sonar.dae  chassis.dae  front_sonar.dae  hubcap.dae  sensor_arch.dae  top.dae  wheel.dae
p3at_description/urdf/: p3at.urdf.xacro  p3at.xacro  p3at_base.urdf  p3at_customisation.urdf.xacro  p3at_test.urdf  pioneer3at.urdf.xacro  pioneer3at_body.xacro
p3at_description/urdf/accessories/: imu.urdf.xacro  imu_icm20948.urdf.xacro  rplidar.urdf.xacro  sensor_arch.urdf.xacro
p3at_desktop/: CMakeLists.txt  package.xml
p3at_desktop/launch/: desktop.launch  p3at_desktop.launch
p3at_embedded/: README.md
p3at_embedded/p3at_gripper_arduino/: Gripper.h  p3at_gripper_arduino.ino
p3at_embedded/p3at_gripper_basic/: Gripper.h  p3at_gripper_basic.ino
p3at_embedded/p3at_teensy/: DCMotor.h  Imu.h  OpticalEncoder.h  TeensyHW.h  p3at_teensy.ino
p3at_extras/icm20948_imu/: CMakeLists.txt  setup.py
p3at_extras/icm20948_imu/config/: mag_config.yaml  mag_config.yaml.backup
p3at_extras/icm20948_imu/scripts/: calibrate_compass  compute_calibration  imu_variance_calc
p3at_extras/icm20948_imu/src/icm20948_imu/: icm20948_publisher.py
p3at_gazebo/: CMakeLists.txt  package.xml
p3at_gazebo/launch/: p3at_empty_world.launch
p3at_msgs/: CMakeLists.txt  package.xml
p3at_msgs/msg/: Drive.msg  DriveFeedback.msg  Feedback.msg  Status.msg
p3at_navigation/: CMakeLists.txt  package.xml
p3at_navigation/launch/: amcl.launch  amcl_demo.launch  cartographer.launch  move_base.launch  odom_navigation_demo.launch  simple_navigation.launch
p3at_navigation/maps/: cartographer.pgm  cartographer.yaml  farscope-room-map.yaml  firstmap.pgm  gmapping-map.yaml  gmapping-map2.yaml  kartomap.pgm  kartomap.yaml  slam_toolbox1.yaml  slam_toolbox2.pgm  slam_toolbox2.yaml
p3at_navigation/maps/old_room_setup/: cartographer.pgm  cartographer2.pgm  cartographer2.yaml  gmapping-map2.pgm  slam_toolbox1.pgm
p3at_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  navfnros_planner.yaml
p3at_resources/udev/: 40-p3at.rules
p3at_tutorials/: teensy3.2_upload_tutorial.md
p3at_viz/: CMakeLists.txt  package.xml
p3at_viz/launch/: view_model.launch  view_robot.launch
p3at_viz/rviz/: map.rviz  model.rviz  robot.rviz  scan.rviz
