<?xml version="1.0"?>
<package format="2">
  <name>p3at_base</name>
  <version>0.0.0</version>
  <description>The p3at_base package</description>

  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Gregory-Baker/p3at</url> 
  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>
  
  <!-- TODO strip/add dependencies once code is written -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslint</depend>
  <depend>rosserial_server</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>topic_tools</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>diff_drive_controller</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>python-scipy</depend>
  <depend>rosserial_python</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
