<?xml version="1.0"?>
<package format="2">
  <name>p3at_bringup</name>
  <version>0.0.0</version>
  <description>Scripts for installing P3AT's robot software</description>

  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Gregory-Baker/p3at</url> 
  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>


  <export>
  </export>
</package>
