<?xml version="1.0"?>
<package format="2">
  <name>p3at_msgs</name>
  <version>0.0.0</version>
  <description>Messages for Pioneer3AT, primarily for interfacing with a microcontroller attached to the MCB</description>

  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Gregory-Baker/p3at</url> 
  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>	
  <exec_depend>message_runtime</exec_depend>
  

  <export>
  </export>
</package>
