<?xml version="1.0"?>
<package format="2">
  <name>p3at_navigation</name>
  <version>0.0.0</version>
  <description>The p3at_navigation package</description>

  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Gregory-Baker/p3at</url>
  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
  </export>
</package>
