<?xml version="1.0"?>
<package format="2">
  <name>p3at_gripper</name>
  <version>0.0.0</version>
  <description>The p3at_gripper package</description>
  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Gregory-Baker/p3at</url> 
  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export>
  </export>
</package>
