<?xml version="1.0"?>
<package format="2">
  <name>vr_pan_tilt_autophat</name>
  <version>0.0.0</version>
  <description>Package to receive head rotation messages and map them to a pan-tilt camera mount (using sparkfun servohat/autophat)</description>
  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
